--- a/pages/aboutus.html
+++ b/pages/aboutus.html
@@ -65,8 +65,8 @@
                             資管二乙<br>
                             10944218<br>
                         </p>
-                            <a href="https://www.facebook.com/profile.php?id=100004909891612" target="_blank"><img src="../assets/images/fb.png" class="bord-img"></a>
-                            <a href="instagram.com/yung_yuan0331" target="_blank"><img src="../assets/images/ig.png" class="bord-img"></a>
+                            <a href="https://www.facebook.com/Grace.ou.89/" target="_blank"><img src="../assets/images/fb.png" class="bord-img"></a>
+                            <a href="https://www.instagram.com/yunyu_0105/" target="_blank"><img src="../assets/images/ig.png" class="bord-img"></a>
                     </div>
                 </td>
             </tr>
@@ -79,8 +79,8 @@
                         資管二甲<br>
                         10944120<br>
                     </p>
-                        <a href="https://www.facebook.com/profile.php?id=100004164316344" target="_blank"><img src="../assets/images/fb.png" class="bord-img"></a>
-                        <a href="https://www.instagram.com/lillian08100/" target="_blank"><img src="../assets/images/ig.png" class="bord-img"></a>
+                        <a href="https://www.facebook.com/profile.php?id=100004909891612" target="_blank"><img src="../assets/images/fb.png" class="bord-img"></a>
+                        <a href="https://www.instagram.com/yung_yuan0331" target="_blank"><img src="../assets/images/ig.png" class="bord-img"></a>
                 </div>
                 </td>
                 <td>
@@ -101,7 +101,7 @@
                             資管二甲<br>
                             10944130<br>
                         </p>
-                            <a href=":https://www.facebook.com/apple.24680/" target="_blank"><img src="../assets/images/fb.png" class="bord-img"></a>
+                            <a href="https://www.facebook.com/apple.24680/" target="_blank"><img src="../assets/images/fb.png" class="bord-img"></a>
                             <a href="https://www.instagram.com/lsabelpei/" target="_blank"><img src="../assets/images/ig.png" class="bord-img"></a>
                     </div>
                 </td>
