--- a/pages/cart.html
+++ b/pages/cart.html
@@ -74,7 +74,7 @@
                 </tr>
                 <tr>
                     <td colspan="7">
-                        <input type="submit" value="加入購物車" onclick="submit()" class="item-cart-img">
+                        <input type="submit" value="送出訂單" onclick="submit()" class="item-cart-img">
                     </td>
                 </tr>
             </table>
