--- a/pages/index.html
+++ b/pages/index.html
@@ -12,6 +12,7 @@
     <script src="asset/js/nav.js"></script>
 </head>
 <body><!--change your life-->
+    <div class="col">
     <nav>
         <a href="cart.html"><img src="../assets/images/cart.png" class="cart"></a>
         <a href="member.html"><img src="../assets/images/teamwork.png" class="teamwork"></a>
@@ -64,17 +65,17 @@
                 <tr>
                     <td>
                         <div class="bord">
-                            <div class="bord-col"><a href=""><img src="../assets/images/eyeone.png" class="pic"></a></div>
+                            <div class="bord-col"><a href="eyes.html"><img src="../assets/images/eyeone.png" class="pic"></a></div>
                         </div>
                     </td>
                     <td>
                         <div class="bord">
-                            <div class="bord-col"><a href=""><img src="../assets/images/breasttwo.png" class="pic"></a></div>
+                            <div class="bord-col"><a href="breast.html"><img src="../assets/images/breasttwo.png" class="pic"></a></div>
                         </div>
                     </td>
                     <td>
                         <div class="bord">
-                            <div class="bord-col"><a href=""><img src="../assets/images/pullthree.png" class="pic"></a></div>
+                            <div class="bord-col"><a href="pull.html"><img src="../assets/images/pullthree.png" class="pic"></a></div>
                         </div>
                     </td>
                 </tr>
@@ -100,5 +101,6 @@
     <footer>
         <h3>｜只要臉換得快，沒有悲傷只有愛｜</h3>
     </footer>
+</div>
 </body>
 </html>
