--- a/pages/cart.html
+++ b/pages/cart.html
@@ -43,42 +43,76 @@
                 <tr>
                     <td><img src="../assets/images/eyes.png" class="table-img"></td>
                     <td>割雙眼皮</td>
-                    <td colspan="3"><input type="number" value="1" class="amount"></td>
+                    <td colspan="3">
+                        <div class="button">
+                            <input type="button" class="num-button" value="-" id="btnOne" onclick="minusNUM(0)">
+                            <input type="text" id="num" class="number" value="1">
+                            <input type="button" class="num-button" value="+" id="btnTwo" onclick="addNUM(0)">
+                        </div>
+                    </td>
                     <td>60000</td>
                     <td>60000</td>
+                    <td colspan="7">
+                        <input type="submit" value="刪除" onclick="submit()" class="item-cart-btn">
+                    </td>
                 </tr>
                 <tr>
                     <td><img src="../assets/images/pull.png"  class="table-img"></td>
                     <td>拉皮</td>
-                    <td colspan="3"><input type="number" value="2" class="amount"></td>
+                    <div class="button">
+                        <td colspan="3">
+                            <input type="button" class="num-button" value="-" id="btnOne" onclick="minusNUM(1)">
+                            <input type="text" id="num" class="number" value="1">
+                            <input type="button" class="num-button" value="+" id="btnTwo" onclick="addNUM(1)">
+                        </td>
+                    </div>
                     <td>150000</td>
                     <td>300000</td>
-                </tr>
-                <tr>
                     <td colspan="7">
+                        <input type="submit" value="刪除" onclick="submit()" class="item-cart-btn">
+                    </td>
+                </tr>
+            </table>
+            <table class="table">
+                <tr>
+                    <td colspan="8">
                         <span>總金額&emsp;&emsp;</span>
                         <span>0</span>
                     </td>
                 </tr>
                 <tr>
-                    <td colspan="7"></td>
+                    <td colspan="8"></td>
                 </tr>
                 <tr>
-                    <td colspan="7">日期：<input type="date" class="item-cart-img"></td>
+                    <td colspan="8">日期：<input type="date" class="item-cart-img"></td>
                 </tr>
                 <tr>
-                    <td colspan="7">時間：<input type="time" class="item-cart-img"></td>
+                    <td colspan="8">時間：<input type="time" class="item-cart-img"></td>
                 </tr>
                 <tr>
-                    <td colspan="7"></td>
+                    <td colspan="8"></td>
                 </tr>
                 <tr>
-                    <td colspan="7">
+                    <td colspan="8">
                         <input type="submit" value="送出訂單" onclick="submit()" class="item-cart-img">
                     </td>
                 </tr>
             </table>
         </form>
     </section>
+    <script>
+        function minusNUM(num){
+            let input = Number(document.getElementsByClassName('number')[num].value);
+            if(input != 1){
+                document.getElementsByClassName('number')[num].value = input-1;
+            }
+        }
+        function addNUM(num){
+            let input = Number(document.getElementsByClassName('number')[num].value);
+            if(input != 1){
+                document.getElementsByClassName('number')[num].value = input+1;
+            }
+        }
+    </script>
 </body>
 </html>
