--- a/pages/eyes.html
+++ b/pages/eyes.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>割雙眼皮</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="star-rating-svg.css">
     <style>
          @import"../assets/css/product.css";
     </style>
+    <script src="rating.js"></script> 
 </head>
 <body>
     <nav>
@@ -48,28 +51,84 @@
                  <form action="#" method="post" id="cart" name="人數">
                     <div class="item-cart-people">人數:</div>
                     <input type="number" min="0" name="人數" id="item-cart-number">
+                    <div class="item-cart-amount">材料庫存:500</div>
                     <input type="submit" value="加入購物車" onclick="submit()" class="item-cart-img">
                  </form>
             </div>
         </div>
         <div class="write">
             <form action="#" method="post" id="message" name="留言">
-                <input type="textarea" name="message" placeholder="留評論" id="txt">
-                <input type="submit" value="送出" onlivk="submit()" id="submit">
+                <div>
+                    <input type="textarea" name="message" placeholder="留評論" id="txt">
+	                <div class="rating-box">
+                        <div class="rating">
+                            <span class="fa fa-star-o" style="font-size: 50px; color: rgb(206, 206, 22);"></span>
+                            <span class="fa fa-star-o" style="font-size: 50px; color: rgb(206, 206, 22);"></span>
+                            <span class="fa fa-star-o" style="font-size: 50px; color: rgb(206, 206, 22);"></span>
+                            <span class="fa fa-star-o" style="font-size: 50px; color: rgb(206, 206, 22);"></span>
+                            <span class="fa fa-star-o" style="font-size: 50px; color: rgb(206, 206, 22);"></span>
+                        </div>
+                        <h4 id="rating-value"></h1>
+                    </div>
+                    <input type="submit" value="送出" onclick="submit()" class="write-submit">
+                </div>                         
             </form>
         </div>
         <div class="message">
             <div class="message-ex">
                  <div class="message-ex-photo"><img src="../assets/images/messageone.jpg" class="message-ex-img"></div>
                  <div class="message-ex-tit"><h3>鮭魚真</h3></div>
+                 <div class="ratings">
+                    <div class="empty-stars"></div>
+                    <div class="full-stars"></div>
+                 </div>
                  <div class="message-ex-txt"><p>視野變更寬了</p></div>
             </div>
             <div class="message-ex">
                  <div class="message-ex-photo"><img src="../assets/images/messagetwo.jpg" class="message-ex-img"></div>
                  <div class="message-ex-tit"><h3>太陽真</h3></div>
+                 <div class="ratings">
+                    <div class="empty-stars"></div>
+                    <div class="full-stars"></div>
+                 </div>
                  <div class="message-ex-txt2"><p>終於能看清楚自己的眼球了</p></div>
             </div>
         </div>
     </section>
+    <script>
+        const stars=document.querySelector(".rating").children;
+        let ratingValue
+        let index //目前選到的星星
+        //document.getElementById("rating-value").innerHTML = "請給分"
+        for(let i=0;i<stars.length;i++){
+            stars[i].addEventListener("mouseover",function(){
+            //  console.log(i)
+            //document.getElementById("rating-value").innerHTML = "正在打分數"
+            for(let j=0;j<stars.length;j++){
+                stars[j].classList.remove("fa-star")//reset 所有星星
+                stars[j].classList.add("fa-star-o")
+            }
+        for(let j=0;j<=i;j++){
+            stars[j].classList.remove("fa-star-o") //先移除空心的星星
+            stars[j].classList.add("fa-star") //添加新的星星 如果i=j表示選中的
+            }
+        })
+        stars[i].addEventListener("click",function(){
+            ratingValue=i+1
+            index=i
+            //document.getElementById("rating-value").innerHTML = "你打的分數是 "+ratingValue
+        })
+        stars[i].addEventListener("mouseout",function(){
+            for(let j=0;j<stars.length;j++){
+                stars[j].classList.remove("fa-star")//reset 所有星星
+                stars[j].classList.add("fa-star-o")
+            }
+            for(let j=0;j<=index;j++){
+                stars[j].classList.remove("fa-star-o")
+                stars[j].classList.add("fa-star")
+            }
+        })
+        }
+    </script>
 </body>
 </html>
