--- a/pages/allproduct.html
+++ b/pages/allproduct.html
@@ -1,15 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>商品總覽</title>
     <style>
         @import"../assets/css/allproduct.css";
-        @import url("https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap");
     </style>
-    <script src="asset/js/nav.js"></script>
 </head>
 <body>
     <nav>
@@ -39,80 +36,57 @@
             <span style="animation-delay: 0.6s">總</span>
             <span style="animation-delay: 0.9s">覽</span>
         </h2>
-        <table>
-            <tr>
-                <td>
+    <div class="container">
+        <div class="row">
+            <div class="col-4">
                     <div class="bord">
                         <div class="bord-col"><a href="eyes.html"><img src="../assets/images/eyes.png" class="pic"></a></div>
                     </div>
-                </td>
-                <td>
-                    <div class="bord">
-                        <div class="bord-col"><a href="breast.html"><img src="../assets/images/breast.png" class="pic"></a></div>
-                    </div>
-                </td>
-                <td>
-                    <div class="bord">
-                        <div class="bord-col"><a href="pull.html"><img src="../assets/images/pull.png" class="pic"></a></div>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
                     <div class="bord-txt">割雙眼皮
                         <span class="bord-txt-price"><br>NT$60000</span>
                     </div>
-                </td>
-                <td>
+            </div>
+            <div class="col-4">
+                    <div class="bord">
+                        <div class="bord-col"><a href="breast.html"><img src="../assets/images/breast.png" class="pic"></a></div>
+                    </div>
                     <div class="bord-txt">隆乳
                         <span class="bord-txt-price"><br>NT$400000</span>
                     </div>
-                </td>
-                <td>
+            </div>
+            <div class="col-4">
+                    <div class="bord">
+                        <div class="bord-col"><a href="pull.html"><img src="../assets/images/pull.png" class="pic"></a></div>
+                    </div>
                     <div class="bord-txt">拉皮
                         <span class="bord-txt-price"><br>NT$150000</span>
                     </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
+            </div>
+            <div class="col-4">
                     <div class="bord">
                         <div class="bord-col"><a href="inject.html"><img src="../assets/images/inject.png" class="pic"></a></div>
                     </div>
-                </td>
-                <td>
-                    <div class="bord">
-                        <div class="bord-col"><a href="losefat.html"><img src="../assets/images/losefat.png" class="pic"></a></div>
-                    </div>
-                </td>
-                <td>
-                    <div class="bord">
-                        <div class="bord-col"><a href="nose.html"><img src="../assets/images/nose.png" class="pic"></a></div>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td>
                     <div class="bord-txt">消脂針
                         <span class="bord-txt-price"><br>NT$10000</span>
                     </div>
-                </td>
-                <td>
+            </div>
+            <div class="col-4">
+                    <div class="bord">
+                        <div class="bord-col"><a href="losefat.html"><img src="../assets/images/losefat.png" class="pic"></a></div>
+                    </div>
                     <div class="bord-txt">抽脂
                         <span class="bord-txt-price"><br>NT$160000</span>
                     </div>
-                </td>
-                <td>
+            </div>
+            <div class="col-4">
+                    <div class="bord">
+                        <div class="bord-col"><a href="nose.html"><img src="../assets/images/nose.png" class="pic"></a></div>
+                    </div>
                     <div class="bord-txt">隆鼻
                         <span class="bord-txt-price"><br>NT$100000</span>
                     </div>
-                </td>
-            </tr>
-            <tr>
-                <td><br><br></td>
-                <td><br><br></td>
-                <td><br><br></td>
-            </tr>
-        </table>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
